syntax="proto3";

package pb.service;

option go_package = "pb/service";
import "pb/service/story.proto";
import "pb/service/story_request.proto";
service StoryService {
    rpc FindAllStoriesByUserID(GetStoriesByUserIDRequest) returns (Stories);
}