syntax = "proto3";
package pb.service;
option go_package="pb/service";

import "pb/service/timestamp.proto";
message Story {
    string id = 1;
    int64 author_id = 2;
    string title = 3;
    repeated string tags_id = 8;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    repeated StoryElement content = 7;
  }
  
  message StoryElement {
    string type = 1;
    optional string text = 2;
    optional ParagraphStyles paragraph_styles = 3;
    optional string url = 4;
    optional ImageStyles image_styles = 5;
    optional string caption = 6;
    optional string alt_text = 7;
  }
  message Stories {
    repeated Story Stories =1;
  }
  message StoriesResponse{
    Stories stories =1 ;
    Metadata metadata = 2;
  }
  message Metadata{
    string NextCursor = 1;
    int64 length = 2;
    bool  hasMore = 3;
  }
message ParagraphStyles {
    string font_size = 1;
    string font_style = 2;
    string font_family = 3;
  }
  
  message ImageStyles {
    string image_size = 1;
  }